# sol-rewards-vault

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
program/: Cargo.toml  README.md
program/src/: create_pda_account.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: patch.crates-io.sh  update-solana-dependencies.sh
